# ReadForMe_Volunteer

./: build.gradle  gradle.properties
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/ensias/readforme_volunteer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/ensias/readforme_volunteer/: HomeActivity.java  LoginActivity.java  (+5 more)
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  wrapper.c  wrapper.h
app/src/main/res/drawable/: apptheme_scrubber_control_selector_holo_dark.xml  apptheme_scrubber_progress_horizontal_holo_dark.xml  buttonbg.xml  editextbg2.xml  editextnormal.xml  editextnormal2.xml  editextselected.xml  editextselected2.xml  facebookbg.xml  gmailbg.xml  ic_fiber_manual_record_black_24dp.xml  ic_save_24dp.xml  ic_stop_black_24dp.xml  ic_sync_black_24dp.xml  ic_timeline_black_24dp.xml  image_border.xml  ripple.xml  ripplegrey.xml  ripplewhite.xml  roundbg.xml  seekbar_progress.xml  shadow_bg.xml  shadow_list_bg.xml  shadowcornder.xml  suggestionsbg.xml
app/src/main/res/layout/: activity_home.xml  activity_login.xml  activity_main.xml  activity_pdf_record.xml  activity_profile.xml  activity_sign_up.xml  add_record_dialog.xml  add_track_dialog.xml  content_pdf_record.xml  file_item.xml  post_item.xml  post_suggestion_file_item.xml  post_suggestion_item.xml
app/src/main/res/menu/: main_activity_bar.xml  record_activity_bar.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+31 files in other folders)
